--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>alphabet practice</title>
+    <!-- daisy ui -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.22/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- custom css -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
+    <section class="home"></section>
+
+    <section class="play-ground">
+
+    </section>
+    <section class="score">
+
+    </section>
 </body>
 
 </html>
