--- a/index.html
+++ b/index.html
@@ -12,16 +12,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="min-h-screen bg-[#010313] text-[#f5f5f5] font-poppins">
 
-    <section class="home"></section>
+    <main class="min-h-screen bg-[url(images/background.png)] bg-no-repeat bg-center">
+        <section class="home flex flex-col items-center justify-center h-screen space-y-4">
+            <div class="flex flex-col items-center justify-center space-y-4 gap-10">
+                <h1 class="text-8xl font-anton font-bold  uppercase">Alpha Clash Pro</h1>
+                <p>Press Start Button to Play The Game</p>
+                <button class="btn btn-primary">Start</button>
+            </div>
+        </section>
 
-    <section class="play-ground">
+        <section class="play-ground">
 
-    </section>
-    <section class="score">
+        </section>
+        <section class="score">
 
-    </section>
+        </section>
+    </main>
+
 </body>
 
 </html>
