--- a/index.html
+++ b/index.html
@@ -15,17 +15,67 @@
 <body class="min-h-screen bg-[#010313] text-[#f5f5f5] font-poppins">
 
     <main class="min-h-screen bg-[url(images/background.png)] bg-no-repeat bg-center">
-        <section class="home flex flex-col items-center justify-center h-screen space-y-4">
+        <!-- home screen start -->
+        <section class="home flex flex-col items-center justify-center h-screen space-y-4 hidden">
             <div class="flex flex-col items-center justify-center space-y-4 gap-10">
                 <h1 class="text-8xl font-anton font-bold  uppercase">Alpha Clash Pro</h1>
                 <p>Press Start Button to Play The Game</p>
                 <button class="btn btn-primary">Start</button>
             </div>
         </section>
-
+        <!-- home screen end -->
+        <!-- playground start -->
         <section class="play-ground">
+            <div>
+                <!-- screen -->
+                <div>
+                    <div
+                        class="artboard artboard-horizontal phone-6 border-8 rounded-2xl border-[20px] border-[#010313CC] bg-[#FFFFFFB3]">
+                        <p class="">Y</p>
+                    </div>
+                </div>
+                <!-- screen end -->
+                <!-- key board -->
+                <div>
+                    <div class="my-1 flex w-full justify-center gap-1">
+                        <kbd class="kbd">q</kbd>
+                        <kbd class="kbd">w</kbd>
+                        <kbd class="kbd">e</kbd>
+                        <kbd class="kbd">r</kbd>
+                        <kbd class="kbd">t</kbd>
+                        <kbd class="kbd">y</kbd>
+                        <kbd class="kbd">u</kbd>
+                        <kbd class="kbd">i</kbd>
+                        <kbd class="kbd">o</kbd>
+                        <kbd class="kbd">p</kbd>
+                    </div>
+                    <div class="my-1 flex w-full justify-center gap-1">
+                        <kbd class="kbd">a</kbd>
+                        <kbd class="kbd">s</kbd>
+                        <kbd class="kbd">d</kbd>
+                        <kbd class="kbd">f</kbd>
+                        <kbd class="kbd">g</kbd>
+                        <kbd class="kbd">h</kbd>
+                        <kbd class="kbd">j</kbd>
+                        <kbd class="kbd">k</kbd>
+                        <kbd class="kbd">l</kbd>
+                    </div>
+                    <div class="my-1 flex w-full justify-center gap-1">
+                        <kbd class="kbd">z</kbd>
+                        <kbd class="kbd">x</kbd>
+                        <kbd class="kbd">c</kbd>
+                        <kbd class="kbd">v</kbd>
+                        <kbd class="kbd">b</kbd>
+                        <kbd class="kbd">n</kbd>
+                        <kbd class="kbd">m</kbd>
+                        <kbd class="kbd">/</kbd>
+                    </div>
+                </div>
+                <!-- key board end -->
+            </div>
 
         </section>
+        <!-- playground end -->
         <section class="score">
 
         </section>
