--- a/index.html
+++ b/index.html
@@ -26,17 +26,24 @@
         <!-- home screen end -->
         <!-- playground start -->
         <section class="play-ground">
-            <div>
+            <div class="container mx-auto p-4 pt-20">
                 <!-- screen -->
-                <div>
+                <div class="flex justify-center items-center h-96">
                     <div
-                        class="artboard artboard-horizontal phone-6 border-8 rounded-2xl border-[20px] border-[#010313CC] bg-[#FFFFFFB3]">
-                        <p class="">Y</p>
+                        class="artboard artboard-horizontal phone-6  border-[20px] rounded-2xl   border-[#010313CC] bg-[#FFFFFFB3]">
+                        <div class="flex items-center justify-center">
+                            <p class="font-bold bg-[#2F2941] px-6 pb-3 rounded-b-xl text-white">Don't watch keyboard
+                                while
+                                playing...</p>
+                        </div>
+                        <div class="flex items-center justify-center h-3/4">
+                            <p class="text-black text-9xl font-bold ">Y</p>
+                        </div>
                     </div>
                 </div>
                 <!-- screen end -->
                 <!-- key board -->
-                <div>
+                <div class="pt-10">
                     <div class="my-1 flex w-full justify-center gap-1">
                         <kbd class="kbd">q</kbd>
                         <kbd class="kbd">w</kbd>
@@ -72,6 +79,29 @@
                     </div>
                 </div>
                 <!-- key board end -->
+                <!-- live Score -->
+                <div class="flex items-center gap-4 pt-10 justify-between w-2/3 mx-auto">
+                    <button class="btn rounded-full bg-purple-700 text-white">
+                        Life
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+                        </svg>
+                        <span>1</span>
+                    </button>
+                    <button class="btn rounded-full bg-purple-700 text-white px-4">
+                        Score
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+                        </svg>
+                        <span>2</span>
+                    </button>
+
+                </div>
+                <!-- live Score end -->
             </div>
 
         </section>
