--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 
     <main class="min-h-screen bg-[url(images/background.png)] bg-no-repeat bg-center">
         <!-- home screen start -->
-        <section class="home flex flex-col items-center justify-center h-screen space-y-4 hidden">
+        <section class="home flex flex-col items-center justify-center h-screen space-y-4">
             <div class="flex flex-col items-center justify-center space-y-4 gap-10">
                 <h1 class="text-8xl font-anton font-bold  uppercase">Alpha Clash Pro</h1>
                 <p>Press Start Button to Play The Game</p>
-                <button class="btn btn-primary">Start</button>
+                <button onclick="play()" class="btn btn-primary bg-white text-black font-bold text-2xl">Start</button>
             </div>
         </section>
         <!-- home screen end -->
         <!-- playground start -->
-        <section class="play-ground">
+        <section class="play-ground hidden">
             <div class="container mx-auto p-4 pt-20">
                 <!-- screen -->
                 <div class="flex justify-center items-center h-96">
@@ -105,12 +105,21 @@
             </div>
 
         </section>
-        <!-- playground end -->
-        <section class="score">
-
+        <!-- playground end -->\
+        <!-- 3rd page start -->
+        <section class="score flex flex-col items-center justify-center h-screen hidden">
+            <div class="container mx-auto text-center space-y-7 bg-[#ffffff33] p-4 rounded-lg">
+                <h1 class="text-8xl uppercase text-center font-anton font-bold">
+                    <span class="font-extrabold">Score:</span>
+                    <span>14</span>
+                </h1>
+                <button class="btn bg-black text-white text-2xl">Play Again</button>
+                <p class="text-2xl">Practice Makes You perfect</p>
+            </div>
         </section>
+        <!-- 3rd page end -->
     </main>
-
+    <script src="/scripts/alpha-clash.js"></script>
 </body>
 
 </html>
