--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <main class="min-h-screen bg-[url(images/background.png)] bg-no-repeat bg-center">
         <!-- home screen start -->
-        <section class="home flex flex-col items-center justify-center h-screen space-y-4">
+        <section id="home-screen" class="home flex flex-col items-center justify-center h-screen space-y-4">
             <div class="flex flex-col items-center justify-center space-y-4 gap-10">
                 <h1 class="text-8xl font-anton font-bold  uppercase">Alpha Clash Pro</h1>
                 <p>Press Start Button to Play The Game</p>
@@ -25,7 +25,7 @@
         </section>
         <!-- home screen end -->
         <!-- playground start -->
-        <section class="play-ground hidden">
+        <section id="play-ground" class="play-ground hidden">
             <div class="container mx-auto p-4 pt-20">
                 <!-- screen -->
                 <div class="flex justify-center items-center h-96">
@@ -105,7 +105,7 @@
             </div>
 
         </section>
-        <!-- playground end -->\
+        <!-- playground end -->
         <!-- 3rd page start -->
         <section class="score flex flex-col items-center justify-center h-screen hidden">
             <div class="container mx-auto text-center space-y-7 bg-[#ffffff33] p-4 rounded-lg">
@@ -120,6 +120,7 @@
         <!-- 3rd page end -->
     </main>
     <script src="/scripts/alpha-clash.js"></script>
+    <script src="/scripts/utility.js"></script>
 </body>
 
 </html>
